--- a/app/package.json
+++ b/app/package.json
@@ -24,23 +24,29 @@
     "@web3-onboard/walletconnect": "^2.5.5",
     "@xyflow/react": "^12.3.2",
     "antd": "^5.19.0",
+    "bull": "^4.16.3",
     "chain-registry": "^1.46.4",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
+    "enquirer": "^2.4.1",
     "ethers": "^5.7.2",
+    "figlet": "^1.8.0",
     "moment": "^2.29.4",
     "mongoose": "^8.3.4",
     "next": "14.0.2",
     "nprogress": "^0.2.0",
+    "octokit": "^4.0.2",
     "react": "18.2.0",
     "react-countup": "^6.4.2",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-redux": "^9.0.4",
     "recharts": "^2.12.2",
+    "tar-fs": "^3.0.6",
     "websocket": "^1.0.35"
   },
   "devDependencies": {
+    "@types/bull": "^4.10.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
