update DB hook and app info

--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -34,7 +34,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts"
-  ],
+, "src/utils/testFindTopoOrder.js"  ],
   "exclude": [
     "node_modules"
   ]
