--- a/app/package.json
+++ b/app/package.json
@@ -31,6 +31,7 @@
     "enquirer": "^2.4.1",
     "ethers": "^5.7.2",
     "figlet": "^1.8.0",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "mongoose": "^8.3.4",
     "next": "14.0.2",
