add env example and init readme docs

--- a/app/.env.example
+++ b/app/.env.example
@@ -1,8 +1,33 @@
-OCEAN_NETWORK=sapphire_testnet
-OCEAN_NETWORK_URL=<replace this>
-PRIVATE_KEY=<secret>
+OCEAN_NETWORK=oasis_saphire_testnet
+RPC=https://testnet.sapphire.oasis.dev
+AQUARIUS_URL=""
+PROVIDER_URL=""
+NODE_URL=""
+NEXT_PUBLIC_CHAIN_ID="23295"
 
 # Optional environment variables
+NEXT_PUBLIC_WALLET_CONNECT_PROJECT_ID=""
+NEXT_PUBLIC_SUPPORT_EMAIL="test@test.com"
+NEXT_PUBLIC_APP_URL="deflow.a2n.finance"
 
-AQUARIUS_URL=https://v4.aquarius.oceanprotocol.com/
-PROVIDER_URL=https://v4.provider.oceanprotocol.com
+# Cloud Mongo Database
+DATABASE_URL=""
+# Redishost for Bull queue implementation
+REDIS_SERVER=""
+
+# Public github config
+GIT_TOKEN=""
+GIT_REPO=""
+GIT_OWNER=""
+GIT_FOLDER_PATH=""
+GIT_NAME=""
+GIT_EMAIL=""
+
+# Reserve accounts for payment all transactions
+PRIVATE_KEY_1=
+PRIVATE_KEY_2=
+PRIVATE_KEY_3=
+PRIVATE_KEY_4=
+PRIVATE_KEY_5=
+PRIVATE_KEY_6=
+
